--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 5000
-MONGO_URI = 'mongodb://127.0.0.1:27017/test'
+MONGO_URI = 'mongodb://127.0.0.1:27017/E-commerce'
+JWT_SECRET = 123456abcdef
+NODE_ENV = development
